--- a/frontend/styles/pages/checkout/checkout.css
+++ b/frontend/styles/pages/checkout/checkout.css
@@ -55,7 +55,6 @@
 
 .payment-summary {
   padding-bottom: 5px;
-
 }
 
 @media (max-width: 1000px) {
@@ -241,4 +240,9 @@ input[type="number"]::-webkit-outer-spin-button {
 /* Hide the spinner for Firefox */
 input[type="number"] {
   -moz-appearance: textfield;
+}
+
+.quantity-validation-pop-up {
+  color: rgb(177, 39, 4);
+  opacity: 0;
 }
